adding of route POST /v1/tx-root/status for webserver of the block validity prover (#161)
* adding of route POST /v1/tx-root/status for webserver of the block validity prover

* adding of route POST /v1/tx-root/status for webserver of the block validity prover (upd txRoot to txRoots)
