# docs/swagger/block_validity_prover/apidocs.swagger.json
@@ -448,6 +448,46 @@
         ]
       }
     },
+    "/v1/tx-root/status": {
+      "post": {
+        "summary": "TxRootStatus returns info of data with information about the block with the specified tx root",
+        "description": "## TxRootStatus returns info of data with information about the block with the specified tx root",
+        "operationId": "BlockValidityProverService_TxRootStatus",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1TxRootStatusResponse"
+            }
+          },
+          "400": {
+            "description": "Validation error",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1TxRootStatusRequest"
+            }
+          }
+        ],
+        "tags": [
+          "BlockValidityProverService"
+        ]
+      }
+    },
     "/v1/version": {
       "get": {
         "summary": "Version returns the build service info",
@@ -525,6 +565,76 @@
       },
       "title": "Leaf data"
     },
+    "DataBlock": {
+      "type": "object",
+      "properties": {
+        "blockType": {
+          "$ref": "#/definitions/v1BlockType",
+          "title": "the type of block"
+        },
+        "txRoot": {
+          "type": "string",
+          "title": "the requested tx tree root"
+        },
+        "prevBlockHash": {
+          "type": "string",
+          "title": "the previous block hash"
+        },
+        "blockNumber": {
+          "type": "integer",
+          "format": "int64",
+          "title": "the block number"
+        },
+        "depositRoot": {
+          "type": "string",
+          "title": "the deposit root at the time of block posting (written in the Rollup contract)"
+        },
+        "signatureHash": {
+          "type": "string",
+          "title": "the hash value that the Block Builder must provide to the Rollup contract when posting a new block"
+        },
+        "messagePoint": {
+          "type": "string",
+          "title": "the elliptic curve expression of txRoot"
+        },
+        "aggregatedPublicKey": {
+          "type": "string",
+          "title": "the block aggregated public key"
+        },
+        "aggregatedSignature": {
+          "type": "string",
+          "title": "the block aggregated signature by senders on the message messagePoint"
+        },
+        "senders": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/DataBlockSender"
+          },
+          "title": "the object contains information about each sender in the block, including their address and validity status"
+        }
+      },
+      "title": "the info consisting of the data about block"
+    },
+    "DataBlockSender": {
+      "type": "object",
+      "properties": {
+        "publicKey": {
+          "type": "string",
+          "title": "the INTMAX address of the sender"
+        },
+        "accountId": {
+          "type": "integer",
+          "format": "int64",
+          "title": "the account ID of the sender"
+        },
+        "isSigned": {
+          "type": "boolean",
+          "title": "the boolean indicating if the sender's transaction is valid (the sender signed the tx root and the balance is non-negative)"
+        }
+      },
+      "title": "Sender returns object contains information about sender in the block, including address and validity status"
+    },
     "DataDeposit": {
       "type": "object",
       "properties": {
@@ -580,6 +690,20 @@
         }
       },
       "title": "the object containing details of the deposit"
+    },
+    "DataError": {
+      "type": "object",
+      "properties": {
+        "txRoot": {
+          "type": "string",
+          "title": "the requested tx tree root"
+        },
+        "message": {
+          "type": "string",
+          "title": "the message about error"
+        }
+      },
+      "title": "Error is the nested message containing response information about the block error"
     },
     "protobufAny": {
       "type": "object",
@@ -843,6 +967,15 @@
         }
       },
       "title": "MerkleProof is the block merkle proof"
+    },
+    "v1BlockType": {
+      "type": "string",
+      "enum": [
+        "NON_REGISTRATION",
+        "REGISTRATION"
+      ],
+      "default": "NON_REGISTRATION",
+      "title": "- NON_REGISTRATION: the block not registered\n - REGISTRATION: the block registered"
     },
     "v1BlockValidityProofResponse": {
       "type": "object",
@@ -1154,6 +1287,55 @@
             "$ref": "#/definitions/DataDeposit"
           },
           "title": "the list of deposits"
+        }
+      },
+      "title": "Data is the nested message containing detailed response information"
+    },
+    "v1TxRootStatusRequest": {
+      "type": "object",
+      "properties": {
+        "txRoots": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "the tx root"
+        }
+      },
+      "title": "TxRootStatusRequest describes request to get info about the data with information about the block with the specified tx root"
+    },
+    "v1TxRootStatusResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean",
+          "title": "the success flag"
+        },
+        "data": {
+          "$ref": "#/definitions/v1TxRootStatusResponseData",
+          "title": "Additional data related to the response"
+        }
+      },
+      "title": "TxRootStatusResponse describes response to get info about the data with information about the block with the specified tx root"
+    },
+    "v1TxRootStatusResponseData": {
+      "type": "object",
+      "properties": {
+        "blocks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/DataBlock"
+          },
+          "title": "the array consisting of the data about blocks"
+        },
+        "errors": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/DataError"
+          },
+          "title": "Additional the errors message related to the response"
         }
       },
       "title": "Data is the nested message containing detailed response information"
